--- a/EmployeeClock/EmployeeClock.csproj
+++ b/EmployeeClock/EmployeeClock.csproj
@@ -12,4 +12,8 @@
     <Folder Include="assets\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
